@@ -110,13 +110,6 @@ Fixes needed for the first release candidate of the Qt4 port
 
 - fix missing icons:
     - some icons are distributed inside the kde3 icons; find them there and install them under ktechlab icons
-    align_horizontally
-    align_vertically
-    distribute_horizontally
-    distribute_vertically
-    file_export_image
-    fileimport
-    imagegallery
     ktechlab_mechanics (?)
     launch
     null (?)
